tests/codegen/fail/aliased_direct_task_handle_use_after_move_build.ql
struct Wrap {
    values: [Int; 0],
}

async fn worker() -> Wrap {
    return Wrap { values: [] }
}

async fn helper() -> Wrap {
    let task = worker()
    let alias = task
    let first = await alias
    return await task
}
